--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "unirest": "^0.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
